ahora si, estamos listos

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,13 @@ code {
   z-index: 1;
 }
 
+@media (max-width: 768px) {
+  #carousel .overlay {
+    position: relative;
+    background-color: rgba(170, 177, 88, 0.638);
+  }
+}
+
 #carousel .overlay .container{
   height: 100%;
 }
